p3/k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: wil-app
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
