p3/k8s/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wil-app.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil-service
                port:
                  number: 8888
